
[metadata]
name = common_astro_models
description = Storage for some commonly used astromodels models with priors
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/grburgess/common_astro_models
author_email = jburgess@mpe.mpg.de
author = J. Michael Burgess
requires_python = >=3.3.0
license = GPL-2+

classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Physics

project_urls =
    Bug Tracker = https://github.com/grburgess/common_astro_models/issues
    Source Code = https://github.com/grburgess/common_astro_models


[options]
packages = find:
install_requires =
    numpy
    matplotlib


tests_require =
    pytest
    pytest-codecov


[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts = --color=yes --cov=common_astro_models --cov-report=term -ra --ignore=common_astro_models/test --ignore=common_astro_models/_version.py
log_cli = 1
log_cli_level = INFO
testpaths = common_astro_models/test 
norecursedirs = common_astro_models/test


[versioneer]
VCS=git
style=pep440
versionfile_source=common_astro_models/_version.py
versionfile_build=common_astro_models/_version.py
tag_prefix=v
parentdir_prefix=common_astro_models-

